gccida/c2/dump_global_regs
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_global_regs/src/global.c:2460:16: error: use of undeclared identifier 'off_6474F4'
fprintf( file, off_6474F4, ( unsigned int)i); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_global_regs/src/obj/global.o] Error 1
